Update pom.xml
https://stackoverflow.com/questions/49581414/jacoco-doesnt-produce-coverage-reports